src/Routes/Home/index.css
.home .column {
  flex: 1;
  height: 100%;
}

.home .column:nth-child(1) {
  border-bottom: 0;
}

.home .column .about-section {
  display: block;
}

.home .column .about-section img {
  width: 100%;
}

.home .column
.about-section .about-preview-info h1 {
  font-size: 3em;
  margin: 0;
  padding: 0 1rem;
  color: #fff;
}

.home .column .navigation-section {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.home .column .navigation-section ul {
  width: 100%;
  padding: 0;
  margin: 0;
  text-align: center;
  list-style: none;
}

.home .column .navigation-section h1 {
  font-size: 6em;
  margin: 0;
  text-transform: uppercase;
}

.home .column .navigation-section ul li {
  color: #FFFF26;
  cursor: pointer;
  padding: 1vh;
}

.home .column .navigation-section span {
  text-transform: uppercase;
  font-size: x-large;
}

.home .column .navigation-section li {
  padding: 1rem 0;
  /* border-bottom: 1px solid #000; */
}

.vision-section h1 {
  margin: 0;
  font-size: 6em;
}

.gallery-section video {
  width: 100%;
}

.gallery-section img {
  max-height: 100%;
  max-width: 100%;
}

@media only screen and (min-width: 390px) and (max-width: 690px) {
  .page .home {
    display: grid;
  }

  .services-section {
    margin-top: 0;
  }

  .home .column .about-section .about-preview-info {
    text-align: center;
  }
}

